--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".Dashboard"/>
         <activity android:name=".LogIn" />
         <activity android:name=".LogInInsurance" />
-        <activity android:name=".CropInfo" />
+        <activity android:name=".CropInfoActivity" />
 
     </application>
 
